== org.nfunk.* =======================================================

Apr 24 05 rjm - Created a CallbackEvaluationI interface which 
			replaces SpecialEvaluationI. This facilitates functions
			which need access to the node tree.
			
Apr 01 05 rjm - Variable: Fixed setting validValue for constants.
			Passes value to observers on setValue.
			
Apr 01 05 rjm - SymbolTable can now have observes passed to it.
			Added a clearNoConstants method.
			
Apr 01 05 rjm - Changed behaviour on errors. Removed references to
			Error list in EvaluationVisitor. ParseExceptions are thrown instead.
			
			getValueAsObject() traps all errors including RuntimeExceptions.			
			evaluate() now only throws ParseException.

Apr 01 05 rjm - trapNulls flag in evaluation visitor. Switchable to trap null nulles or not.

Apr 01 05 rjm - Jep copy constructor fixed.

Apr 01 05 rjm - If now works with Numbers
	
Feb 13 05 rjm - Added binom, conj functions.

Dec 19 njf - figured out documentation linking issues. Leaving docs as they were
             before Nov 1 (no frames, javadoc at /doc/javadoc)
             
Dec 10 rjm - nodeAccept method added to jep.EvaluationVisitor so that it
			 can be easier for sub classes to use visitor pattern.
			 
		   - Improved printing facilities for complex numbers.
		   
Nov  6 njf - Merged JEPTester and JEPTest into JEPTest, now in the JUnit framework

Nov  3 rjm - JEP.evaluate() method will throw an exception if this.hasErrors() is true.

Nov  1 njf - changed documentation to frames
           - added new FAQ item

Oct 23 njf - added source="1.2" to javac options in build.xml
             avoids compile time error with 1.5 compiler by ensuring
             1.2 source compatibility
       njf - fixed [ 1046349 ] bug in sum()
       njf - fixed [ 1051988 ] JEPTester falsely reports "No errors"
       njf - improved value comparison and error reporting in JEPTester
       njf - reformated Comparative.java, added comments
